--- a/senguo.cc/admin/templates/beauty/home.html
+++ b/senguo.cc/admin/templates/beauty/home.html
@@ -94,7 +94,7 @@
             <div class="modal-body set-width-float text-center">
                 <p class="detail font14 text-center"></p>
             </div>
-            <div class="modal-bottom"><img src="/static/images/info_bot.png"/></div>
+            <!-- <div class="modal-bottom"><img src="/static/images/info_bot.png"/></div> -->
         </div>
     </div>
 </div>
