--- a/senguo.cc/admin/templates/bingo/personal-center.html
+++ b/senguo.cc/admin/templates/bingo/personal-center.html
@@ -142,7 +142,7 @@
                 <button class="btn sure_btn bg-green3 text-white addressEdit" style="display:none">确定</button>
                 <button class="btn sure_btn bg-green3 text-white addressAdd" style="display:none">确定</button>
             </div>
-            <div class="modal-bottom"><img src="/static/images/info_bot.png"/></div>
+            <!-- <div class="modal-bottom"><img src="/static/images/info_bot.png"/></div> -->
         </div>
     </div>
 </div>
