--- a/senguo.cc/admin/templates/customer/points.html
+++ b/senguo.cc/admin/templates/customer/points.html
@@ -46,7 +46,7 @@
                 </ul>
                 <p class="text-center mt10">(注：您在每个店铺的积分独立)</p>
             </div>
-           <div class="modal-bottom"><img src="/static/images/info_bot.png"/></div>
+           <!-- <div class="modal-bottom"><img src="/static/images/info_bot.png"/></div> -->
         </div>
     </div>
 </div>
