--- a/senguo.cc/admin/templates/customer/order-detail.html
+++ b/senguo.cc/admin/templates/customer/order-detail.html
@@ -158,7 +158,7 @@
                     <button class="bg-green btn clearfix text-white" id="del-ok">确定</button>
                 </div>
             </div>
-            <div class="modal-bottom"><img src="/static/images/info_bot.png"/></div>
+            <!-- <div class="modal-bottom"><img src="/static/images/info_bot.png"/></div> -->
         </div>
     </div>
 </div>
