--- a/senguo.cc/admin/templates/customer/profile.html
+++ b/senguo.cc/admin/templates/customer/profile.html
@@ -208,7 +208,7 @@
             <div class="modal-footer clearfix">
                 <button type="button" class="btn pull-right tie-btn bg-green3 sure_btn text-white"  id="pwdSure">确定</button>
             </div>
-             <!-- <div class="modal-bottom"><img src="/static/images/info_bot.png"/></div> -->
+            <div class="modal-bottom"><img src="/static/images/info_bot.png"/></div>
         </div>
     </div>
 </div>-->
