--- a/senguo.cc/admin/static/m-admin/css/reset.css
+++ b/senguo.cc/admin/static/m-admin/css/reset.css
@@ -120,7 +120,7 @@ textarea{width: 100%;border: none;overflow: hidden;resize: none;}
 .header{position: fixed;top: 0;left: 0;z-index:999;width: 100%;background-color: #48b6a4;height: 40px;line-height:40px;color: #fff;text-align: center;}
 .back{display: inline-block;height: 40px;min-width:40px;line-height:2.9em;padding-left: 12px;font-size:14px;background-image: url('/static/svg/back-white@2x.png');background-size: 10px 16px;color: #fff;position: absolute;left: 12px;top: 0;background-position: left center;}
 .back:link,.back:visited,.back:hover,.back:active{color: #fff;}
-.header span{font-size: 16px;}
+.header span{font-size: 16px;display: inline-block;max-width: 80%;white-space: nowrap;overflow: hidden;text-overflow: ellipsis;}
 .head-right{display: inline-block;height: 40px;width: 60px;position: absolute;right: 0;top: 0;}
 .head-right:link,.head-right:visited,.head-right:hover,.head-right:active{color: #fff;}
 .head-right.search>em{display: block;background-image: url('/static/bbs/img/bbs_top.png');background-repeat: no-repeat;background-size: 20px 40px;background-position: 0 -20px;width: 20px;height: 20px;margin: 10px 20px;}
