--- a/senguo.cc/admin/templates/m-admin/order.html
+++ b/senguo.cc/admin/templates/m-admin/order.html
@@ -8,9 +8,9 @@
     <a href="{{reverse_url('MadminShop')}}" class="back goback">返回</a>
     <div class="wrap-order-tab">
         <ul class="group order-type-list">
-            <li class="active item" data-id="1">立即送</li>
-            <li class="item" data-id="2">按时达</li>
-            <li class="item" data-id="3">自提</li>
+            <li class="active item {% if not handler.current_shop.config.now_on %}c999{% end %}" data-id="1">立即送</li>
+            <li class="item {% if not handler.current_shop.config.ontime_on %}c999{% end %}" data-id="2">按时达</li>
+            <li class="item {% if not handler.current_shop.config.self_on %}c999{% end %}" data-id="3">自提</li>
             <li class="tab-bg"></li>
         </ul>
     </div>
