--- a/senguo.cc/admin/templates/m-admin/shop-profile.html
+++ b/senguo.cc/admin/templates/m-admin/shop-profile.html
@@ -88,19 +88,19 @@
             <span class="box-icon data-order">订单管理</span>
         </p>
         <ul class="group stat-order-list pm8">
-            <a href="{{reverse_url('MadminOrder')}}?type=0">
+            <a href="javascript:;" url="{{reverse_url('MadminOrder')}}?type=0" class="order-links {% if not handler.current_shop.config.now_on %}forbid-in{% end %}" >
                 <li>
                     <p class="name">立即送</p>
                     <p class="num"><span class="tip-num">{{intime_count}}</span></p>
                 </li>
             </a>
-             <a href="{{reverse_url('MadminOrder')}}?type=1">
+             <a href="javascript:;" url="{{reverse_url('MadminOrder')}}?type=1" class="order-links {% if not handler.current_shop.config.ontime_on %}forbid-in{% end %}">
                 <li>
                     <p class="name">按时达</p>
                     <p class="num"><span class="tip-num">{{ontime_count}}</span></p>
                 </li>
             </a>
-            <a href="{{reverse_url('MadminOrder')}}?type=2">
+            <a href="javascript:;" url="{{reverse_url('MadminOrder')}}?type=2" class="order-links {% if not handler.current_shop.config.self_on %}forbid-in{% end %}">
                 <li>
                     <p class="name">自提</p>
                     <p class="num"><span class="tip-num">{{self_count}}</span></p>
