--- a/senguo.cc/admin/templates/admin/discount-edit.html
+++ b/senguo.cc/admin/templates/admin/discount-edit.html
@@ -273,6 +273,6 @@
 {% end %}
 {% block bottom %}
 <script src="/static/js/third/jquery.zclip.min.js"></script>
-<script src="{{static_url('js/third/datepicker/WdatePicker.js')}}"></script>
+<script src="/static/js/third/datepicker/WdatePicker.js"></script>
 <script src="{{static_url('js/admin-discount.js')}}"></script>
 {% end %}
