--- a/senguo.cc/admin/templates/admin/newcoupon.html
+++ b/senguo.cc/admin/templates/admin/newcoupon.html
@@ -199,6 +199,6 @@
 {% end %}
 {% block bottom %}
 <script src="/static/js/third/jquery.zclip.min.js"></script>
-<script src="{{static_url('js/third/datepicker/WdatePicker.js')}}"></script>
+<script src="/static/js/third/datepicker/WdatePicker.js"></script>
 <script src="{{static_url('js/admin-coupon.js')}}"></script>
 {% end %}
