--- a/senguo.cc/admin/templates/admin/seckill-new.html
+++ b/senguo.cc/admin/templates/admin/seckill-new.html
@@ -163,6 +163,6 @@
 {% end %}
 {% block bottom %}
 <script src="/static/js/third/jquery.zclip.min.js"></script>
-<script src="{{static_url('js/third/datepicker/WdatePicker.js')}}"></script>
+<script src="/static/js/third/datepicker/WdatePicker.js"></script>
 <script src="{{static_url('js/admin-marketing-seckill.js')}}"></script>
 {% end %}
