--- a/senguo.cc/admin/templates/customer/address.html
+++ b/senguo.cc/admin/templates/customer/address.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="{{static_url('css/market-profile.css')}}"/>
 {% end %}
 {% block content %}
-<div class="user-info-detail pt36 clea bm-none" id="container" data-code="{{shop_code}}">
+<div class="user-info-detail pt36 clea bm-none" id="address_page" data-code="{{shop_code}}">
     <ul class="address-lst">
         {% for address in current_user.addresses%}
         <li class="active">
@@ -25,30 +25,12 @@
             </div>
         </li>
         {% end %}
-        <li>
-            <div class="address-row">
-                <span class="c333 icon-left i-person">黄铁森的店铺</span>
-                <span class="c333 icon-left i-phone">12525251212</span>
-            </div>
-            <div class="address-row">
-                <p class="icon-left i-address f12 c666">
-                    斯蒂芬斯蒂芬是的房贷首付斯蒂芬但是范德萨打发似的
-                </p>
-            </div>
-            <div class="address-row line-top">
-                <div class="fr">
-                    <span class="c666 f12 icon-left i-edit">编辑</span>
-                    <span class="c666 f12 icon-left i-del ml10">删除</span>
-                </div>
-                <span class="c666 icon-left i-check f12">默认地址</span>
-            </div>
-        </li>
     </ul>
     <a href="javascript:;" class="new-address" id="new_address">+添加新地址</a>
 </div>
 {% end %}
 {% block bottom %}
-<div class="modal fade sex-popbox" id="nameBox">
+<div class="modal fade sex-popbox" id="address_box">
     <div class="modal-dialog anim-bounceIn">
         <div class="modal-content">
             <div class="modal-top"><img src="/static/images/info_top.png"/></div>
@@ -57,17 +39,17 @@
                 <h2 class="modal-title  text-center line48">收货地址</h2>
             </div>
             <div class="modal-body">
-                <p>
-                    <span class="modal-left">收货人：</span>
+                <p class="row-address">
                     <input type="text" class="name-ipt input1" id="address_name" placeholder="请输入真实姓名" value=""/>
+                    <span class="modal-left">收货人：</span>
                 </p>
-                <p>
-                    <span class="modal-left">电话：</span>
+                <p class="row-address">
                     <input type="tel" class="name-ipt input1" id="address_phone" placeholder="请输入手机号" value=""/>
+                    <span class="modal-left">电话：</span>
                 </p>
-                <p>
-                    <span class="modal-left">收货地址：</span>
+                <p class="row-address">
                     <input type="text" class="name-ipt input1" id="address_address" placeholder="请输入地址" value=""/>
+                    <span class="modal-left">收货地址：</span>
                 </p>
             </div>
             <div class="modal-warn">
