fix shopdel style

--- a/senguo.cc/admin/templates/admin/del-shop.html
+++ b/senguo.cc/admin/templates/admin/del-shop.html
@@ -53,7 +53,7 @@
 
 <main class="container mt100">
     <div class="s-container">
-         <p class="text-grey3 switch-title-text font14 mt20 ml30">
+         <p class="text-grey3 switch-title-text font14 mt20">
             <a href="{{reverse_url('switchshop')}}" class="text-grey9 switch-title">多店铺管理中心</a>
             <span class="text-grey3"> / 已删除的店铺</span>
         </p>
