--- a/senguo.cc/admin/static/css/market-shop.css
+++ b/senguo.cc/admin/static/css/market-shop.css
@@ -67,3 +67,5 @@ li:last-child{border-bottom:0;}
 .bm-line{border-bottom:1px solid #f2f2f2;}
 .bt-none {border-top:none !important;}
 .comment-title{margin-top:13px;}
+
+.change-item{position:absolute;right:5px;top:5px;display:inline-block;background:url('/static/m-admin/img/icon_shop_active.png') no-repeat center center #fff;height:30px;width:30px;background-size:20px;border-radius:50%;}
