--- a/senguo.cc/admin/templates/apply/base.html
+++ b/senguo.cc/admin/templates/apply/base.html
@@ -24,7 +24,7 @@
 <header class="head-box">
     <div class="w1200 header-box">
         <a href="{{reverse_url('adminHome')}}" class="logo-box">
-            <img src="/static/images/logo.png"/>
+            <img src="/static/official_img/new_logo.png"/>
         </a>
         <span class="title" id="title">后台管理系统</span>
         <span class="beta" id="beta">beta 2.5</span>
