--- a/senguo.cc/admin/templates/official/coummunity.html
+++ b/senguo.cc/admin/templates/official/coummunity.html
@@ -37,7 +37,7 @@
 		<ul>
 			<li class="item">
 				<div class="article_img pull-left">
-					<img src="/static/images/logo.png" class="img"/>
+					<img src="/static/official_img/new_logo.png" class="img"/>
 					<button type="button" class="great">
 						<p class="text-grey font16 text-center mt10">赞</p>
 						<p class="text-white text-center mt2">2222</p>
