--- a/senguo.cc/admin/templates/admin/order-count.html
+++ b/senguo.cc/admin/templates/admin/order-count.html
@@ -3,75 +3,92 @@
 {% block head %}<link rel="stylesheet" href="{{static_url('css/admin-count.css')}}"/>{% end %}
 {% block content %}
 <span class="right-title">订单统计</span>
-<div class="box">
-    <p class="tit font16">月走势图</p>
+<div class="subnav-box clearfix">
+    <ul class="subnav pull-left order-type">
+        <li class="text-center col-lg-3 col-md-3 col-xs-3 col-sm-3">
+            <a href="javascript:;"  class="order_amount text-grey3">订单量</a>
+        </li>
+        <li class="text-center col-lg-3 col-md-3 col-xs-3 col-sm-3">
+            <a href="javascript:;"  class="payment_mode text-grey3">支付方式</a>
+        </li>
+        <li class="text-center col-lg-3 col-md-3 col-xs-3 col-sm-3">
+            <a href="javascript:;"  class="order_user text-grey3">下单用户</a>
+        </li>
+        <li class="text-center col-lg-3 col-md-3 col-xs-3 col-sm-3">
+            <a href="javascript:;"  class="order_time text-grey3">下单时间</a>
+        </li>
+        <li class="text-center col-lg-3 col-md-3 col-xs-3 col-sm-3">
+            <a href="javascript:;"  class="recive_time text-grey3">收货时间</a>
+        </li>
+    </ul>
+</div>
+<div class="order_count_comment clearfix">
+    <p>统计不同订单模式下的订单量与订单金额</p>
+</div>
+
+
+<div class="box admin-right">
     <div class="month-change center-block font18">
-        <a href="javascript:;" class="pre_month text-grey2"> < </a>
+        <a href="javascript:;" class="pre-item1 text-grey2"> < </a>
         <span class="">
-            <span class="year"></span>年
-            <span class="month"></span>月
+            <span class="year-span1"><span class="year1"></span>年</span>
+            <span class="month-span1"><span class="month1"></span>月</span>
         </span>
-        <a href="javascript:;" class="next_month text-grey2"> > </a>
+        <a href="javascript:;" class="next-item1 text-grey2"> > </a>
     </div>
-    <div class="change-box">
-        <ul id="order_trend_change" class="change-list pull-left">
-            <li data-id="1"><a href="javascript:;" class="text-grey3">订单量/个</a></li>
-            <li data-id="2"><a href="javascript:;" class="text-grey3">订单金额/元</a></li>
+    <div class="change-box font16">　　
+        <ul id="ordercount_way_change" class="ordercount-change-list1 pull-left">
+            <li class="li-sort-date"><a href="javascript:;" class="sort-date1 text-grey3">按天排</a></li>
+            <li class="li-sort-week"><a href="javascript:;" class="sort-week1 text-grey3">按周排</a></li>
+            <li class="li-sort-month"><a href="javascript:;" class="sort-month1 text-grey3">按月排</a></li>
+        </ul>
+        <ul id="ordercount_way_change2" class="ordercount-change-list2 pull-left">
+            <li><input type="text" class="Wdate from_get_date" id="begin_date" onclick="var ordercount_trend=$dp.$('ordercount_trend');WdatePicker({isShowWeek:true,dateFmt:'yyyy-MM-dd',maxDate:'#F{$dp.$D(\'end_date\')}',onpicked:function(){ordercount_trend.focus();timeChanged(1);}})"></li> 
+            <li> 到 <input type="text" class="Wdate to_get_date" id="end_date" onclick="var ordercount_trend=$dp.$('ordercount_trend');WdatePicker({isShowWeek:true,dateFmt:'yyyy-MM-dd',minDate:'#F{$dp.$D(\'begin_date\')}',onpicked:function(){ordercount_trend.focus();timeChanged(2);}})"></li>     
+        </ul>   
+        <ul class="val_method_change  pull-right">
+            <li class="valuation-count"><a href="javascript:;" class="choose-btn mr10"></a>个</li>
+            <li class="valuation-money"><a href="javascript:;" class="choose-btn mr10"></a>元</li>
+            <li>单位</li>
         </ul>
     </div>
-    <div id="order_trend" style="height:400px" class="clearfix"></div>
+
+    <div id="ordercount_trend" style="height:400px" class="clearfix"></div>
+
+    <div class="ordercount_sumup clearfix pull-left">
+        <p></p>
+    </div>
+
     <hr class="clearfix"/>
-    <p class="tit font16">下单时间统计</p>
-    <div class="change-box">
-        <ul id="order_time_change" class="change-list pull-left">
-            <li data-id="1"><a href="javascript:;" class="text-grey3">累计数据/个</a></li>
-            <li data-id="2"><a href="javascript:;" class="text-grey3">昨日数据/元</a></li>
-        </ul>
-    </div>
-    <div id="order_time" style="height:400px"  class="clearfix"></div>
-    <hr/>
-    <p class="tit font16">收货时间统计</p>
-    <div class="change-box">
-        <ul id="receive_time_change" class="change-list pull-left">
-            <li data-id="1"><a href="javascript:;" class="text-grey3">累计数据/个</a></li>
-            <li data-id="2"><a href="javascript:;" class="text-grey3">昨日数据/元</a></li>
-        </ul>
-    </div>
-    <div id="receive_time" style="height:400px"  class="clearfix"></div>
-    <hr/>
     <p class="tit font16">详细数据</p>
-    <table class="detail-count text-center table-count">
-        <tr class="bg-grey2">
-            <td>时间</td>
-            <td>日订单数</td>
-            <td>累计订单</td>
-            <td>日订单金额</td>
-            <td>累计订单金额</td>
-            <td>客单价</td>
-        </tr>
-    </table>
-    <div class="detail-pagination list-pagination clearfix">
-        <ul>
-            <li><a href="javascript:;" class="page-btn pre-page">&nbsp;</a></li>
-            <li>
-                <span class="page-now"></span>/<span class="page-total"></span>
-            </li>
-            <li><a href="javascript:;" class="page-btn next-page">&nbsp;</a></li>
-            <li><input class="input-page form-control" type="text" placeholder="输入页码"/></li>
-            <li><a href="javascript:;" class="jump-to">跳转</a></li>
-        </ul>
-    </div>
-    <hr/>
-    <p class="tit font16">重复购买率</p>
+        
     <table class="detail-rate text-center table-count">
         <tr class="bg-grey2">
-            <td>时间</td>
-            <td>新增老用户订单</td>
-            <td>累计老用户订单</td>
-            <td>新增订单</td>
-            <td>累计总订单</td>
-            <td>日回头率</td>
-            <td>累计回头率</td>
+            <td>
+                <div class="dropdown slide-down-select w130 v_middle font12">
+                    <button class="btn btn-default dropdown-toggle area height25 slide-btn" type="button" id="dropdownMenu3" data-toggle="dropdown">
+                        <em class="pull-left filter font12" data-id="list_day">日期</em>
+                        <span class="caret pull-right no-margin-left rotate0"></span>
+                    </button>
+                    <ul class="dropdown-menu dropdown-menu-right w130 condition-list" role="menu" aria-labelledby="dropdownMenu3" id="currentShopChange3">
+                        <li role="presentation">
+                            <a class="item font12" href="javascript:;" data-id="list_day">日期</a>
+                        </li>
+                        <li role="presentation">
+                            <a class="item font12" href="javascript:;" data-id="list_week">星期</a>
+                        </li>
+                        <li role="presentation">
+                            <a class="item font12" href="javascript:;" data-id="list_month">月份</a>
+                        </li>
+                    </ul>
+                </div>
+            </td>
+            <td>总订单数</td>
+            <td>营业额</td>
+            <td>客单价</td>
+            <td>累计订单</td>
+            <td>累计营业额</td>
+            <td>累计客单价</td>
         </tr>
     </table>
     <div class="rate-pagination list-pagination clearfix">
@@ -90,4 +107,6 @@
 {% block bottom %}
 <script src="/static/js/echarts.js"></script>
 <script src="{{static_url('js/admin-order-count.js')}}"></script>
+<script src="{{static_url('js/superadmin-public.js')}}"></script>
+<script src="{{static_url('js/third/datepicker/WdatePicker.js')}}"></script>
 {% end %}
