--- a/senguo.cc/admin/static/css/market-cart.css
+++ b/senguo.cc/admin/static/css/market-cart.css
@@ -1,11 +1,13 @@
-.box-style{width:100%;margin-top:20px;margin-bottom:10px;padding:0 10px;}
+.box-style{width:100%;margin-bottom:10px;padding:0 10px;}
 .list-group{margin-bottom:10px;}
 .bg-width{width:100%;padding-bottom:18px;}
-.bg-box{padding:10px;}
+.bg-box{padding: 10px 0;}
+.bg1{padding-top: 0;}
+.bg2{padding-top: 40px;}
 .w-per6{width:60%;}
 .w-per9{width:90%;}
-.bottom-line{background:url('../svg/cart-paper-border@2x.png') repeat-x;height:8px;background-size:8px;}
-
+.bottom-line{background:url('../svg/cart-paper-border@2x.png') repeat-x;height:8px;background-size:8px;float: left;width: 100%;}
+.detail-header .title{color: #fff;}
 .list-group .active{border-color:#f0f4f0;border-left:2px solid #33CC66;color:#33CC66;}
 .list-group-item:first-child{border-radius:0;}
 .list-group-item:last-child{border-radius:0;}
@@ -15,7 +17,7 @@
 .list-group-item{border-color:#f0f4f0;}
 .list-group-item.active .title{color: #33CC66;}
 
-.cart-list{padding:45px 10px 20px 10px;border-radius:3px;}
+.cart-list{padding:10px;border-radius:3px;background-color: #fff;}
 .cart-list-item{position:relative;}
 .cart-list-item .box{padding:5px;}
 .cart-list-item .goods-img{border-radius:2px;width:60px;}
@@ -71,7 +73,7 @@
 .send-address-choose .address{width:85%;}
 .send-address-choose .to-edit-address{width:15%;margin-top:16px;}
 .send-address-choose .active .phone{color:#33CC66;}
-.message-input{padding:10px 15px;width:90% !important;border-color:#fff;border-radius:3px;}
+.message-input{padding:0 6px;-webkit-box-sizing:border-box;border:1px solid #e7e7e7;border-radius:4px;height: 32px;margin-bottom: 0px;}
 .message-input:focus{border-color:#ddd;}
 .border-grey{border-color:#ddd;}
 .tip-list li{width:32%;margin-right:1%;}
@@ -88,9 +90,8 @@
 .left70{left:70px !important;}
 .left82{left:82px !important;}
 .list-group{padding:0 10px;}
-.address-box{padding:10px;margin:10px 0;}
 .w118{width:118px;}
-.w90{width: 90px;}
+.w60{width: 60px;}
 .tie-popbox .tie-info{width:100%;}
 .tie-popbox .tie-info .input1{width:100%;border:1px solid #e7e7eb;border-radius:2px;background:#F9F9F9;padding:0.5em 0;text-indent:0.5em;margin-bottom:0.5em;}
 .tie-popbox .tie-info .input1:focus{border-color:#00D681;}
@@ -101,24 +102,64 @@
 .tie-popbox  .tie-btn{;color:#fff;}
 .first_notice{border:none;background:none;color:red}
 .a-cz{color: #33CC66;margin: 0 10px;display: inline-block;}
-.wrap-online-lst{margin-top: -1px;position: relative;}
-.check-lst{padding: 5px 0;border:1px solid #f0f4f0;border-top:none;border-left:2px solid #33cc66;background-color: #f0f4f0;}
-.check-lst>li{height: 50px;padding: 0 15px;cursor: pointer;}
+.check-lst>li{height: 50px;padding: 0 15px 0 10px;cursor: pointer;}
 .arrow-top{position: absolute;font-size: 0;line-height: 0;border:10px solid #fff;border-bottom:10px solid #f0f4f0;top:-20px;left:85px;}
-.third-img{width: 40px;height: 40px;margin:4px 0 0 14px;}
+.third-img{width: 40px;height: 40px;margin:4px 0 0 0;}
 .checkbox-btn{background-image: url('/static/images/check_uncheck.png');width: 20px;height: 20px;margin-top: 14px;background-repeat: no-repeat;background-size: 20px 20px;border-radius: 2px;}
-.third-txt{width: 90px;line-height: 48px;}
+.third-txt{padding-top: 4px;}
+.third-txt>p{margin-top: 2px;}
 .checkboxed{background-image: url('/static/images/check_checked.png');}
 .title{width: 90px;text-align: left;color: #333;}
 .title-right{max-width: 60%;position: absolute;top:0;left: 104px;}
 .title-right>span{display: block;}
+/*new cart*/
+.c999{color:#999 !important;}
+.c666{color: #666 !important;}
+.c333{color: #333!important; }
+.f12{font-size: 12px !important;}
+.address-box{background-color: #fff;padding: 10px 0;position: relative;background-color: #fffaf3;}
+.address-row{padding: 0 10px;line-height: 20px;font-size: 14px;margin-top: 6px;}
+.icon-left{padding-left: 20px;background-size: 16px;background-repeat: no-repeat;background-position: left center;}
+.i-person{background-image: url('../images/icon/4.png');display: inline-block;width: 150px;white-space: nowrap;overflow: hidden;text-overflow: ellipsis;vertical-align: middle;}
+.i-phone{background-image: url('../images/icon/5.png');}
+.i-address{background-image: url('../images/icon/6.png');background-position: left 2px;white-space: nowrap;overflow: hidden;text-overflow: ellipsis;}
+.i-more{display: inline-block;position: absolute;right:10px;top:50%;margin-top:-8px;padding-right: 14px;font-size:14px;height: 16px;line-height:16px;background: url('../images/arr-right.png') no-repeat right center;background-size: 8px 16px;}
+.fruit-icons{background-color: #fff;}
+.f14{font-size: 14px !important;}
+.wrap-fruits{position: relative;padding: 6px 60px 0 10px;font-size: 14px;}
+.fruits-lst>li{width: 20%;padding-bottom:20%;height:0;padding-right:6px;float:left;}
+.fruits-lst>li img{width: 100%;border-radius: 4px;}
+.wrap-say-ipt{padding: 6px 10px;border-top: 1px solid #e7e7e7;}
+.dilivery-box{background-color: #fff;padding-left: 10px;padding-top: 10px;}
+.cartb-box{padding: 0 0 8px 70px;position: relative;}
+.left-title{display: inline-block;width: 70px;height: 33px;font-size:14px;line-height: 32px;color: #333;position: absolute;left: 0;top: 0;}
+.ptm5{padding: 10px 0 10px 70px;border-top: 1px solid #d3d3d3;}
+.bt0{border-top: none !important;}
+.bts-lst>li{float:left;margin-right:10px;border-radius:4px;cursor: pointer;width: 70px;height: 32px;line-height:32px;-webkit-box-sizing:border-box;border: 1px solid #a8a8a8;text-align: center;font-size: 14px;color: #333;}
+.bts-lst>li:last-child{margin-right: 0;}
+.bts-lst .active{background-color: #33CC66;color: #fff;border: none;}
+.coupon-cart-box{height: 40px;color: #333;line-height: 40px;position: relative;padding-left: 10px;background-color: #fff;}
+.coupon-last{background-color: #33CC66;color: #fff;border-radius: 4px;display: inline-block;font-size: 14px;padding: 0 4px;height: 18px;line-height: 18px;margin-left: 10px;}
+.top4{top: 4px;}
+.pay-type-box{background-color: #fff;padding-left: 10px;padding-top: 10px;}
+.pay-line{border-top: 1px solid #d3d3d3;padding: 10px 0;}
+.money-box{background-color: #fff;padding: 10px;}
+.money-box>p{line-height: 20px;font-size: 14px;}
+.money-txt{color: #33CC66;font-size: 14px;}
+.fu-txt{color: #33CC66;font-size: 14px;margin-right: 20px;}
+.pointer{cursor: pointer;}
+.p0{padding: 0 !important;}
+.mt0{margin-top: 0px !important;}
+.clip{white-space: nowrap;overflow: hidden;text-overflow: ellipsis;}
+.select-slide{width: 90%;height: 19px;border: none;font-size: 14px;color: #333;outline: none;-webkit-tap-highlight-color:rgba(0,0,0,0);}
+.red-tip-txt{position: absolute;width: 70px;font-size: 12px;color: #f25f5f;line-height: 14px;right: 10px;top: 2px;}
 /*beauty*/
 .yellow-text{color: #ff9800;}
 .pay-bill{position: fixed;bottom:50px;width:100%;max-width:800px;min-width:320px;z-index:100;height: 40px;border-top:1px solid #eee;line-height: 40px;text-align: right;font-size: 14px;background-color: rgba(255,255,255,.8);color: #666;left: 50%;-webkit-transform:translate(-50%,0);}
 .order-submit{background-color: #ff9800;display: inline-block;width: 80px;height: 40px;line-height: 40px;color: #fff;text-align: center;margin-left: 10px;white-space: nowrap;}
 .coupon-text{color: #666;font-size: 12px;margin-left: 10px;}
-.wrap-coupontype{padding: 0 10px;}
-.coupon_type{border:1px solid #f0f4f0;border-left:none;max-height: 200px;}
+.wrap-coupontype{background-color: #fff;max-height: 200px;overflow: auto;overflow-x: hidden;}
+.coupon_type{border:1px solid #f0f4f0;border-left:none;max-height: 150px;}
 .coupon_type>li{height: 50px;padding:0 6px;cursor: pointer;font-size: 12px;border-left:2px solid #f0f4f0;}
 .coupon_type .active{border-left-color:#33cc66;color: #33CC66;}
 .coupon-bg{display: inline-block;height: 30px;width: 57px;color: #fff;text-align: center;line-height: 30px;white-space: nowrap;background: url('/static/images/coupon_pay.png') no-repeat left center;background-size: contain;}
