--- a/senguo.cc/admin/templates/customer/detail-base.html
+++ b/senguo.cc/admin/templates/customer/detail-base.html
@@ -21,7 +21,7 @@
     <main class="container phone-box" id="container">
         {% block header %}
         <header class="detail-header text-white center-block" id="nav">
-            <a href="{%block back%}javascript:history.back(-1){% end %}" class="return-btn bg_change"></a>
+            <a href="{%block back%}javascript:history.go(-1){% end %}" class="return-btn bg_change"></a>
             <span class="title font16">{% block top %}{% end %}</span>
         </header>
         {% end %}
