--- a/senguo.cc/admin/static/css/market-global.css
+++ b/senguo.cc/admin/static/css/market-global.css
@@ -44,7 +44,7 @@ div,p,span,ul,li{-webkit-user-select:none;}
 .modal.in .modal-dialog{-webkit-transform:translate3d(0,0,0);-o-transform:translate3d(0,0,0);transform:translate3d(0,0,0)}
 */
 .modal-dialog{position:relative;margin:10px auto;top:50%;margin-top:-150px;padding:0 19px;width:320px;}
-.modal-content{position:relative;-webkit-background-clip:padding-box;background-clip:padding-box;border:1px solid #999;border:1px solid rgba(0,0,0,.2);border-radius:8px;outline:0;margin:0 auto;-webkit-box-shadow:0 0 60px rgba(0,0,0,.5);box-shadow:0 0 60px rgba(0,0,0,.5);background-color:#F0F4F0 !important;padding-bottom: 38px;}
+.modal-content{position:relative;-webkit-background-clip:padding-box;background-clip:padding-box;border:1px solid #999;border:1px solid rgba(0,0,0,.2);border-radius:8px;outline:0;margin:0 auto;-webkit-box-shadow:0 0 60px rgba(0,0,0,.5);box-shadow:0 0 60px rgba(0,0,0,.5);background-color:#F0F4F0 !important;}
 /*
 .modal-backdrop{position:fixed;top:0;right:0;bottom:0;left:0;z-index:1040;background-color:#000}
 .modal-backdrop.fade{filter:alpha(opacity=0);opacity:0}
@@ -56,8 +56,8 @@ div,p,span,ul,li{-webkit-user-select:none;}
 .modal-head{position:absolute;}
 .modal-title{margin:0;font-weight:normal;}
 .modal-body{position:relative;font-size:1em;padding:0 10px;color:#999;}
-.modal-footer{margin-top:30px;clear:both;}
-.modal-footer .btn{position:absolute;left:85px;z-index:6666;border-radius: 20px;padding:5px 40px;margin-top: -16px;}
+.modal-footer{margin-top:75px;clear:both;}
+.modal-footer .btn{position:absolute;left:85px;z-index:6666;border-radius: 20px;padding:5px 40px;margin-top: -45px;}
 /*.modal-footer .btn+.btn{margin-bottom:0;margin-left:5px;}*/
 .modal-footer .btn-group .btn+.btn{margin-left:-1px}
 .modal-footer .btn-block+.btn-block{margin-left:0}
@@ -87,7 +87,7 @@ a:focus{border:none;background-color:none;outline:0;}
 .notice_bg{width:100%;height:auto;position:fixed;top:100px;z-index:9999;}
 .notice_box{width:280px;background:rgba(0,0,0,0.5);padding:20px 10px;border-radius:4px;margin:0 auto;}
 button:focus{outline:0;}
-#warn{position:absolute;padding:5px;font-size:14px;}
+#warn{position:absolute;padding:3px;font-size:12px;}
 .hand{cursor: pointer;}
 .bg-white{background-color:#fff !important;}
 .bg-green{background-color:#33CC66 !important;}
