--- a/senguo.cc/admin/templates/superAdmin/shop-manage.html
+++ b/senguo.cc/admin/templates/superAdmin/shop-manage.html
@@ -95,12 +95,16 @@
                 </div>
                 <div class="col-lg-5 col-md-5 ml13">
                     <p>
-                        <span class="tit2 shop_property">营业额：{{data["shop_property"]}}元</span>
+                        <span class="tit6 shop_property">营业额：{{data["shop_property"]}}元</span>
                         <span class="single_price">客单价：{{data["single_price"]}}元</span>
                     </p>
                     <p>
-                        <span class="tit2 available_balance">账户：{{data["available_balance"]}}元</span>
+                        <span class="tit6 available_balance">账户：{{data["available_balance"]}}元</span>
                         <span class="fans_count">粉丝数：{{data["fans_count"]}}</span>
+                    </p>
+                    <p>
+                        <span class="tit6 purchaseConverRate">购买转化率：{{data["purchaseConverRate"]}}</span>
+                        <span class="repeatPurRate">重复购买率：{{data["repeatPurRate"]}}</span>
                     </p>
                 </div>
             </div>
