--- a/senguo.cc/admin/templates/customer/profile.html
+++ b/senguo.cc/admin/templates/customer/profile.html
@@ -227,6 +227,7 @@
                     <li class="list-group-item height40" data-id="0">其他</li>
                 </ul>
             </div>
+            <div class="modal-footer2 clearfix"></div>
             <!-- <div class="modal-bottom"><img src="/static/images/info_bot.png"/></div> -->
         </div>
     </div>
@@ -304,6 +305,7 @@
             <div class="modal-body">
                 <p class="font14 text-center">用户ID是您在该平台的唯一身份标识</p>
             </div>
+            <div class="modal-footer2 clearfix"></div>
             <!-- <div class="modal-bottom"><img src="/static/images/info_bot.png"/></div> -->
         </div>
     </div>
