--- a/senguo.cc/admin/templates/beauty/personal-center.html
+++ b/senguo.cc/admin/templates/beauty/personal-center.html
@@ -117,7 +117,7 @@
                 <button type="button" class="close dismiss">✕</button>
             </div>
             <div class="modal-body font14">
-                <div class="w60 center-block pt10">
+                <div class="w60 center-block">
                     <p class="set-inl-blo m-b5">
                         <span class="pull-left tit set-inl-blo">收货人：</span>
                         <input type="text" id="address_name" class="pull-left bg-white"/>
