--- a/senguo.cc/admin/templates/customer/profile.html
+++ b/senguo.cc/admin/templates/customer/profile.html
@@ -281,9 +281,9 @@
                 <h2 class="modal-title  text-center line48">修改生日</h2>
             </div>
             <div class="modal-body">
-                <input type="text" class="birth-ipt input1" id="year-ipt" placeholder="出生年份,如：2015" value=""/>
-                <input type="text" class="birth-ipt input1" id="month-ipt" placeholder="出生月份,如：05" value=""/>
-                <input type="text" class="birth-ipt input1" id="day-ipt" placeholder="出生当天,如：20" value=""/>
+                <input type="text" class="birth-ipt input1" id="year-ipt" placeholder="出生年份，如：2015" value=""/>
+                <input type="text" class="birth-ipt input1" id="month-ipt" placeholder="出生月份，如：05" value=""/>
+                <input type="text" class="birth-ipt input1" id="day-ipt" placeholder="出生当天，如：20" value=""/>
             </div>
             <div class="modal-warn">
             </div>
