--- a/senguo.cc/admin/static/css/market-center.css
+++ b/senguo.cc/admin/static/css/market-center.css
@@ -46,12 +46,12 @@ hr{margin-top:0 !important;;margin-bottom:0 !important;margin-left:24px;}
 
 .discover-list a{display:inline-block;width:100%;height:45px;}
 .discover-list  li{position:relative;margin-bottom: 10px;}
-.discover-list .circle{position:absolute;display:inline-block;width:18px;height:18px;line-height:18px;border-radius:50%;top:14px;text-align:center;right:22px;}
+.discover-list .circle{position:absolute;display:inline-block;width:18px;height:18px;line-height:18px;border-radius:50%;top:14px;text-align:center;right:22px;font-size:12px;}
 
 .confess i{display:inline-block;width:22px;height:22px;background-image:url('../images/discover_list.png');background-size:22px;margin:13px 12px 0 12px;background-position: 0 0;}
 .coupon i{display:inline-block;width:22px;height:22px;background-image:url('../images/discover_list.png');background-size:22px;background-position:0 -25px;margin:13px 12px 0 12px;}
 .seckill i{display:inline-block;width:22px;height:22px;background-image:url('../images/discover_list.png');background-size:22px;background-position:0 -50px;margin:13px 12px 0 12px;}
-.discount i{display:inline-block;width:22px;height:22px;background-image:url('../images/discover_list.png');background-size:22px;background-position:0 -76px;margin:13px 12px 0 12px;}
+.discount i{display:inline-block;width:22px;height:22px;background-image:url('../images/discover_list.png');background-size:22px;background-position:0 -77px;margin:13px 12px 0 12px;}
 .gbuy i{display:inline-block;width:22px;height:22px;background-image:url('../images/discover_list.png');background-size:22px;background-position:0 -104px;margin:13px 12px 0 12px;}
 .presell i{display:inline-block;width:22px;height:22px;background-image:url('../images/discover_list.png');background-size:22px;background-position:0 -129px;margin:13px 12px 0 12px;}
 .ml6{margin-left: 6px;}
