--- a/senguo.cc/admin/static/css/superadmin-main.css
+++ b/senguo.cc/admin/static/css/superadmin-main.css
@@ -33,6 +33,7 @@
 .account-num{display: inline-block;font-size: 14px;margin-right:20px;}
 .money-ipt{width: 200px;height: 30px;font-size: 14px;color: #333;border-radius: 2px;border: 1px solid #cecece;}
 .wrap-balance{width: 900px;float: right;}
+.wrap-refund{width: 900px;float: right;}
 .apply-lst{padding: 10px;}
 .apply-lst>li{float: left;padding-left:5px;width: 33.3%;cursor: pointer;}
 .apply-lst .active{border-left:2px solid #52b43f;}
