--- a/senguo.cc/admin/templates/customer/cart.html
+++ b/senguo.cc/admin/templates/customer/cart.html
@@ -262,15 +262,12 @@
                 <h2 class="modal-title  text-center line48"></h2>
             </div>
             <div class="modal-body font14 clearfix">
-                <div class="tie-info">
-
-                </div>
+                <p class="area-text-cont">您已超出该店铺的配送范围，卖家有可能不安排配送</p>
+                <p class="area-text-tip">(以上信息仅供参考，可能不准确)</p>
             </div>
-            <div class="modal-warn">
-            </div>
-            <div class="modal-footer clearfix">
-                <button type="button" class="btn pull-right tie-btn bg-grey9 sure_btn"  id="cancelArea">取消</button>
-                <button type="button" class="btn pull-right tie-btn bg-green3 sure_btn"  id="sureArea">确定</button>
+            <div class="modal-footer clearfix area-footer">
+                <a href="javascript:;" class="btn tie-btn bg-green3 area-btn btn-right"  id="sureArea">继续下单</a>
+                <a href="tel:15002787394" class="btn tie-btn bg-grey9 area-btn btn-left">联系卖家</a>
             </div>
         </div>
     </div>
