--- a/senguo.cc/admin/templates/customer/address.html
+++ b/senguo.cc/admin/templates/customer/address.html
@@ -21,7 +21,7 @@
                     <span class="c666 f12 icon-left i-edit" data-id="{{address.id}}">编辑</span>
                     <span class="c666 f12 icon-left i-del ml10" data-id="{{address.id}}">删除</span>
                 </div>
-                <span class="c666 icon-left i-check {% if address.if_default==1 %}i-checked{% end %} f12" data-id="{{address.id}}">默认地址</span>
+                <span class="c666 icon-left i-check {% if address.if_default==1 %}i-checked{% end %} f12" data-id="{{address.id}}">使用该地址</span>
             </div>
         </li>
         {% end %}
