--- a/senguo.cc/admin/templates/customer/shop-info.html
+++ b/senguo.cc/admin/templates/customer/shop-info.html
@@ -145,7 +145,7 @@
                     <ul class="group com-goods-lst">
                         {% for img in comment[10] %}
                         <li>
-                            <a href="{{img}}" title=""><img src="{{img}}?imageView2/1/w/200/h/200" alt="晒单图片"/></a>
+                            <a href="{{img}}?imageView2/5/w/640" title=""><img src="{{img}}?imageView2/1/w/200/h/200" alt="晒单图片"/></a>
                         </li>
                         {% end %}
                     </ul>
