--- a/senguo.cc/admin/templates/admin/orders.html
+++ b/senguo.cc/admin/templates/admin/orders.html
@@ -208,6 +208,23 @@
             </ul>
         </div>
     </li>
+    <li>
+        <div class="cate-title">是否打印 : </div>
+        <div class="dropdown slide-down-select pull-left w130">
+            <button class="btn btn-default dropdown-toggle area height25 slide-btn" type="button" id="dropdownMenu5" data-toggle="dropdown">
+                <em class="pull-left print_type" data-id="9">所有</em>
+                <span class="caret pull-right no-margin-left rotate0"></span>
+            </button>
+            <ul class="dropdown-menu dropdown-menu-right w130 condition-list" role="menu" aria-labelledby="dropdownMenu5" id="currentShopChange5">
+                 <li role="presentation">
+                    <a class="item" href="javascript:;" data-id="0">未打印</a>
+                </li>
+                <li role="presentation">
+                    <a class="item" href="javascript:;" data-id="1">已打印</a>
+                </li>
+            </ul>
+        </div>
+    </li>
 </ul>
 <!--orders-mode-lock-end-->
 <div class="order-list set-width-float">
